# AutoCommit

./: CMakeLists.txt  LICENSE  Makefile  README.md
includes/: auto_commit.h  git_utils.h  utf8.h
srcs/: commit_builder.c  commit_rules.c  git_utils.c  main.c  version.c
